<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.wcs.quetesoidisantsimple.MainActivity">

    <TextView
        android:text="@string/welcome"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/welcome" />

    <CheckBox
        android:text="@string/checkBoxAdhesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/checkBox" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/firstName"
        android:ems="10"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"
        android:id="@+id/firstName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:ems="10"
        android:layout_below="@+id/firstName"
        android:layout_alignEnd="@+id/firstName"
        android:id="@+id/name" />

    <Button
        android:text="@string/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:id="@+id/validateButton" />

    <TextView
        android:text="@string/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/validateButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp"
        android:id="@+id/congrats" />


</RelativeLayout>
